fix side nav button spacing

--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -49,7 +49,7 @@
     justify-content: space-between;
     flex-grow: 0;
     height: 80px;
-    padding: 1.25rem 1.25rem var(--spacing-xs);
+    padding: 1.25rem;
     overflow: hidden;
     border-bottom-width: 0;
 
@@ -62,14 +62,7 @@
     }
 
     ul {
-      &:nth-child(2) {
-        grid-column: 1 / 2;
-        padding-bottom: var(--spacing-xxs);
-      }
-      &:nth-child(3) {
-        grid-column: 1 / 2;
-        padding-top: var(--spacing-xxs);
-      }
+      grid-column: 1 / 2;
     }
 
     &:global(.open),
@@ -77,7 +70,6 @@
       grid-template-rows: min-content 2fr;
       min-height: 350px;
       height: 100%;
-      padding: 1.25rem 1.25rem var(--spacing-xs);
     }
   }
 
@@ -182,10 +174,7 @@
   flex-wrap: nowrap;
   align-items: center;
   border-radius: 9999px;
-  padding-left: 0.3rem;
-  padding-right: 0.3rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding: 0.5rem;
   border: 1px solid var(--sidebar-type-color);
   &:hover {
     background-color: var(--sidebar-type-color);
